Creating new favorites component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,4 @@
-<p>navbar works!</p>
+<nav>
+  <a href="">Favorite Literature Books</a> | <a href="">Favorite Games</a> |
+  <a href="https://www.youtube.com/@vilarj" target="_blank">YouTube Channel</a>
+</nav>
