Continue working on navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,7 @@
 <nav>
-  <a href="">Favorite Literature Books</a> | <a href="">Favorite Games</a> |
-  <a href="https://www.youtube.com/@vilarj" target="_blank">YouTube Channel</a>
+  <div><a href="">Favorite Literature Books</a></div>
+  <div><a href="">Favorite Games</a></div>
+  <div>
+    <a href="{{ LINK }}" target="_blank">YouTube Channel</a>
+  </div>
 </nav>
